fixed scrollbar handling bug

--- a/vedaweb-frontend/src/index.css
+++ b/vedaweb-frontend/src/index.css
@@ -20,10 +20,7 @@
 
 /* GLOBAL STYLING */
 
-html {
-    overflow-y: scroll;
-}
-
 body {
+    overflow-y: scroll;
     background-color: #fff;
 }
